[SC-7663] - Avoid public pages scrolling on smaller screens for CFOMembers layout

--- a/src/account/layouts/cfo-member/cfo-member-layout.component.less
+++ b/src/account/layouts/cfo-member/cfo-member-layout.component.less
@@ -2,7 +2,9 @@
 Login page
 ***/
 /* bg color */
-
+/deep/ body.cfo-members {
+    background-color: #1F272D !important;
+}
 :host {
     height: 100%;
 }
